-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
v6.14-rc2-2-g06b9e91425b2
jbd2: remove unused transaction->t_private_list
This breaks the current hook used to handle ldiskfs transactions.
Lets restore this support without requiring this additional callback chain support from jbd2
- is related to
-
LU-20725 performance-sanity test_2: MDS soft lockup in ptlrpc_commit_replies() in new kernels
-
- Open
-